.provarCaches/00D410000011HE0EAM/objects/rstk__iclocitemzero__c.object
<CustomObject>
    <description>iclocitemzero__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_defaultproject__c</fullName>
        <formula>rstk__iclocitemzero_div__r.rstk__sydiv_dflthomeproj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>iclocitemzero</relationshipLabel>
        <relationshipName>iclocitemzero</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>iclocitemzero</relationshipLabel>
        <relationshipName>iclocitemzeros</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_locid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Stock Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>iclocitemzero</relationshipLabel>
        <relationshipName>iclocitemzero</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_locnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Stock Location No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_locsec__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_loctype__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>iclocitemzero</relationshipLabel>
        <relationshipName>iclocitemzero</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>iclocitemzero</relationshipLabel>
        <relationshipName>iclocitemzero</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_trackind__c</fullName>
        <label>Tracking Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lot No</fullName>
                </value>
                <value>
                    <fullName>Outside operation</fullName>
                </value>
                <value>
                    <fullName>Rework Order</fullName>
                </value>
                <value>
                    <fullName>Serial No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__iclocitemzero_wbs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WBS (Future Use)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>iclocitemzero</label>
    <listViews>
        <fullName>rstk__RS_ICLOCITEM</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstk__iclocitemzero_div__c</columns>
        <columns>rstk__iclocitemzero_item__c</columns>
        <columns>rstk__iclocitemzero_loctype__c</columns>
        <columns>rstk__iclocitemzero_proj__c</columns>
        <columns>rstk__iclocitemzero_site__c</columns>
        <columns>rstk__iclocitemzero_locid__c</columns>
        <columns>rstk__iclocitemzero_locnum__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>RS ICLOCITEM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Zero_Location</fullName>
        <columns>NAME</columns>
        <columns>rstk__iclocitemzero_div__c</columns>
        <columns>rstk__iclocitemzero_site__c</columns>
        <columns>rstk__iclocitemzero_item__c</columns>
        <columns>rstk__iclocitemzero_loctype__c</columns>
        <columns>rstk__iclocitemzero_proj__c</columns>
        <columns>rstk__iclocitemzero_locid__c</columns>
        <columns>rstk__iclocitemzero_locnum__c</columns>
        <columns>rstk__iclocitemzero_trackind__c</columns>
        <columns>rstk__iclocitemzero_locsec__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Zero Location</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>iclocitemzero</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>